--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-server.port=8082
-server.servlet.context-path=/spring-boot-jdbc-jpa-postgresql-customer-app-poc
+#server.port=8082
+#server.servlet.context-path=/spring-boot-jdbc-jpa-postgresql-customer-app-poc
 
 spring.datasource.url= jdbc:postgresql://techmserver-1.postgres.database.azure.com:5432/postgres
 spring.datasource.username= techmuser1@techmserver-1
@@ -15,4 +15,4 @@ spring.jpa.properties.hibernate.jdbc.batch_size=10000
 
 spring.jpa.hibernate.ddl-auto= update
 
-spring.mvc.async.request-timeout=200000ms
+spring.mvc.async.request-timeout=300s
