--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,8 @@
 #server.port=8082
 #server.servlet.context-path=/spring-boot-jdbc-jpa-postgresql-customer-app-poc
 
+#psql -h techmserver-1.postgres.database.azure.com -p 5432 -U techmuser1@techmserver-1 postgres
+
 spring.datasource.url= jdbc:postgresql://techmserver-1.postgres.database.azure.com:5432/postgres
 spring.datasource.username= techmuser1@techmserver-1
 spring.datasource.password= Techmuser@1234
